# protocol-system-test-harness

./: .gitignore  Makefile  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/workflows/: ci.yml
.hypothesis/constants/: 25e650928881b25b  520848f7e4f6eb14  650be6934cf835ab  8f7ba15d07877dfa  9520726f8ec209f2  97e2f23e5b918c96  a9d9a1e7c69a82cd  ace4a54a666ad6a7  b2e3f4c6e6290871  b982ea0ebfec5d8a  d432be10e5574d27  d51f22a6a58ca857  d96c22a05c1fca67  da39a3ee5e6b4b0d  ebff41e4a7676a2b  fcc531d6a15fe8d9
artifacts/: metrics_summary.json
artifacts/metrics/: tests_system_test_performance_envelope.py__test_combined_drop_and_delay_envelope.json  tests_system_test_performance_envelope.py__test_delay_envelope_udp_ping.json  tests_system_test_performance_envelope.py__test_drop_envelope_with_retries_udp_ping.json
services/device_sim/app/: main.py
services/device_sim/app/core/: faults.py  (+2 more)
src/protocol_system_test_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qaharness/api/: client.py
src/qaharness/config/: settings.py
src/qaharness/reporting/: __init__.py  sql_store.py
src/qaharness/transport/: framing.py  tcp.py  udp.py
src/qaharness/utils/: retry.py
tests/: conftest.py
tests/e2e/: control-console.spec.ts
tests/smoke/: test_basic_handshake.py  test_health.py  test_tcp.py
tests/system/: test_example_cross_protocol.py  test_fault_injection_corruption.py  test_fault_injection_drop_retry.py  test_performance_envelope.py  test_state_transitions.py
tests/unit/: test_framing_fuzzy.py
(+6 files in other folders)
