[project]
name = "protocol-system-test-harness"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pytest>=8.0",
  "httpx>=0.27",
  "jinja2>=3.1",
]

[project.optional-dependencies]
test = [
  "pytest-cov>=5.0",
  "hypothesis>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "system: system/integration tests that exercise simulator + protocol behavior",
  "smoke: fast smoke tests",
]

[tool.mypy]
python_version = "3.11"
files = ["src/qaharness"]
exclude = "(^|/)(\\.venv|build|dist|.*\\.egg-info)/"